--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
     },
     "autoload": {
         "psr-4": {"EPL2\\": "src/"}
-    }
+    },
+    "authors": [
+        {
+            "name": "Enmy Perez",
+            "email": "enmyperez@gmail.com"
+        }
+    ],
 }
