--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "phpunit/phpunit": "^5.7"
     },
     "autoload": {
-        "psr-4": {"EPL2\\": "src/"}
+        "psr-4": {
+            "EPL2\\": "src/EPL2"
+        }
     },
     "authors": [
         {
